Fix cards displaying out of boxes

--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -17,6 +17,51 @@
   float: right;
 }
 
+.clear-button:hover{
+  border: 1px solid #950714;
+  color: #950714;
+}
+
+.submit-button:hover{
+  border: 1px solid #20b807;
+  color: #20b807;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.form-button {
+  padding: 3px 5px 3px 5px;
+  border-radius: 0px;
+  background-color: #1F1F1F;
+  font-family: $work;
+  margin-bottom: 3px;
+  border: 1px solid #fff;
+  color: #fff;
+}
+
+.form-buttons{
+  @include flex-row();
+
+  .form-button:hover{
+    opacity: 85%;
+    //border: 1px solid #fff;
+    //color: #fff;
+  }
+  .show-activity-form:hover{
+    border: 1px solid #F5634B;
+    color: #F5634B;
+  }
+  .show-hydration-form:hover{
+    border: 1px solid #54C6BE;
+    color: #54C6BE;
+  }
+  .show-sleep-form:hover{
+    border: 1px solid #FBD089;
+    color: #FBD089;
+  }
+}
 
 .info-button {
   background-image: url(../images/info.png);
