--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'buttons';
 @import 'mobile';
+@import 'text-elements';
 
 *,
 *:after,
@@ -31,48 +32,24 @@ header {
   height: auto;
 }
 
-button:hover {
-  cursor: pointer;
+form {
+  display:flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+
 }
 
-.form-buttons{
-  @include flex-row();
-  .form-button {
-    padding: 3px 5px 3px 5px;
-    border-radius: 0px;
-    border: 1px solid #fff;
-    font-family: $work;
-    margin-bottom: 3px;
-  }
-  .form-button:hover{
-    opacity: 85%;
-    border: 1px solid #afadad;
-  }
-  .show-activity-form{
-    background-color: #F5634B;
-  }
-  .show-hydration-form{
-    background-color: #54C6BE;
-  }
-  .show-sleep-form{
-    background-color: #FBD089;
-  }
+.sub-res{
+  width:100%;
+  color:#fff;
+  padding:5px;
+  text-align: center;
 }
-// #profile-button {
-//   position: absolute;
-//   right: 10px;
-//   top: 0px;
-//   background-image: url(../images/profile.png);
-//   background-position: center;
-//   background-size: 5.6vw;
-//   border: none;
-//   display: inline;
-//   float: right;
-//   height: 5.6vw;
-//   margin-right: .5vw;
-//   margin-top: 1.6vw;
-//   width: 5.6vw;
-// }
+
+.hours-slept-input{
+  width: 90px;
+}
 
 #user-info-dropdown {
   background-color: #1F1F1F;
@@ -96,68 +73,6 @@ button:hover {
   width: 100%;
 }
 
-/* TEXT ELEMENTS */
-h1 {
-  color: #fff;
-  display: inline;
-  font-size: 5.4vw;
-  letter-spacing: .2em;
-  height: 45px;
-}
-
-h2 {
-  font-size: 7vw;
-  letter-spacing: .1em;
-}
-
-h3 {
-  display: inline;
-  font-family: $work;
-  font-size: 2.5vw;
-  font-weight: 700;
-  letter-spacing: .2em;
-}
-
-h4 {
-  font-size: 6vw;
-}
-
-h5 {
-  font-size: 1.8vw;
-  padding-bottom: 1vw;
-  text-align: center;
-}
-
-p {
-  font-family: $work;
-  font-size: 1.2vw;
-  font-weight: 600;
-  letter-spacing: .2vw;
-  margin-right: 1vw;
-  padding-top: 2vw;
-  text-align: right;
-  width: 9vw;
-  word-break: keep-all;
-}
-
-.main-start-text{
-  color: black;
-  display: inline;
-  font-family: $work;
-  font-size: 2.5vw;
-  font-weight: 700;
-  letter-spacing: .2em;
-}
-
-#dropdown-name{
-  font-size: 1.8vw;
-  padding-bottom: 1vw;
-  text-align: center;
-}
-
-#sleep-friend-longest-sleeper{
-  font-size: 3.5vw;
-}
 
 /* MAIN */
 main {
@@ -166,7 +81,7 @@ main {
     "steps hydration" 50%
     "stairs sleep" 50%
     / 50% 50%;
-  height: 85%;
+  height: 100%;
 }
 
 .main-card {
@@ -186,9 +101,29 @@ main {
   border: 3px solid #1F1F1F;
 }
 
+// .info-card{
+//   height:100%;
+//
+// }
+
 .friends-card{
   display: flex;
   flex-direction: column;
+  height: 100%;
+  width: 100%;
+  button{
+    left: 10px;
+    top: 40px;
+  }
+  .card-data-line{
+    margin-bottom: 0;
+    h4{
+      font-size: 5vw;
+    }
+    p{
+      font-size: 1vw;
+    }
+  }
 }
 
 .main-card-top-row {
@@ -237,21 +172,12 @@ main {
 .calendar-card{
   .hydration-weekly-label{
     font-size:1.25vw;
-    padding-top:1.25vw;
+    padding-top:.75vw;
   }
   .hydration-weekly-amount{
     font-size:2.25vw;
   }
 }
-
-// .hydration-weekly-label {
-//   font-size: 1vw;
-//   padding-top: 1vw;
-// }
-//
-// .hydration-weekly-amount {
-//   font-size: 2vw;
-// }
 
 .hydration-data-line {
   display: flex;
@@ -282,6 +208,8 @@ main {
   color: #F8BA00;
 }
 
+
+/*MOBILE DISPLAY*/
 @media screen and (max-width: 600px) {
   header{
     display:flex;
@@ -369,6 +297,32 @@ main {
       justify-content: space-between;
     }
   }
+
+  .clear-button{
+    border: 1px solid #950714;
+    color: #950714;
+    width: 40%;
+  }
+
+  .submit-button{
+    border: 1px solid #20b807;
+    color: #20b807;
+    width: 40%;
+  }
+
+  .show-activity-form{
+    border: 1px solid #F5634B;
+    color: #F5634B;
+  }
+  .show-hydration-form{
+    border: 1px solid #54C6BE;
+    color: #54C6BE;
+  }
+  .show-sleep-form{
+    border: 1px solid #FBD089;
+    color: #FBD089;
+  }
+
   #user-info-dropdown {
     p{
       font-size:4vw;
